# test_kafka

TestKafka/: .cproject  .project  sdkconfig  sdkconfig.defaults
TestKafka/components/librdkafka/: CMakeLists.txt  rdaddr.c  rdbuf.c  rdkafka_buf.h  rdkafka_cgrp.c  rdkafka_conf.c  rdkafka_offset.c  rdkafka_partition.c  rdkafka_transport.h
TestKafka/components/librdkafka/include/: config.h
TestKafka/components/librdkafka/include/include/: placeholder.h
TestKafka/main/: hello_world_main.c
